force-app/main/default/objects/OA_Opportunity_Intelligence__c/OA_Opportunity_Intelligence__c.object-meta.xml
<CustomObject>
    <description>Opportunity Intelligence scorecard (Program 020). Observe/recommend-only: one record per generated assessment of a CRM Opportunity. Deterministic scores + AI narrative (via OA_AI_Gateway). NEVER writes to the Opportunity. Human-gated via Status__c (system writes Draft only).</description>
    <label>Opportunity Intelligence</label>
    <nameField>
        <displayFormat>OI-{0000000}</displayFormat>
        <label>Assessment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Intelligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>