force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/AI_Capability_Gap__c.field-meta.xml
<CustomField>
    <fullName>AI_Capability_Gap__c</fullName>
    <label>AI Capability Gap</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>