force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/AI_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>AI_Estimated_Cost__c</fullName>
    <label>AI Estimated Cost (USD)</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>