force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/AI_Executive_Brief__c.field-meta.xml
<CustomField>
    <fullName>AI_Executive_Brief__c</fullName>
    <label>AI Executive Brief</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>