force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/AI_Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>AI_Latency_Ms__c</fullName>
    <label>AI Latency Ms</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>