force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/AI_Next_Best_Action__c.field-meta.xml
<CustomField>
    <fullName>AI_Next_Best_Action__c</fullName>
    <label>AI Next Best Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>