force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/AI_Partner_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_Partner_Recommendation__c</fullName>
    <label>AI Partner Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>