force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/AI_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>AI_Risk_Assessment__c</fullName>
    <label>AI Risk Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>