force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/AI_Total_Tokens__c.field-meta.xml
<CustomField>
    <fullName>AI_Total_Tokens__c</fullName>
    <label>AI Total Tokens</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>