force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Campaign_Signal__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Signal__c</fullName>
    <label>Campaign Signal</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>