force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Capability_Match__c.field-meta.xml
<CustomField>
    <fullName>Capability_Match__c</fullName>
    <label>Capability Match</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>