force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>High</fullName><default>false</default><label>High</label></value>
        <value><fullName>Medium</fullName><default>true</default><label>Medium</label></value>
        <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
    </valueSetDefinition></valueSet>
</CustomField>