force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Data_Completeness__c.field-meta.xml
<CustomField>
    <fullName>Data_Completeness__c</fullName>
    <label>Data Completeness</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>