force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Effort_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Effort_Estimate__c</fullName>
    <label>Effort Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>