force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Meeting_Signal__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Signal__c</fullName>
    <label>Meeting Signal</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>