force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Intelligence</relationshipLabel>
    <relationshipName>Opportunity_Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>