force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Partner_Match__c.field-meta.xml
<CustomField>
    <fullName>Partner_Match__c</fullName>
    <label>Partner Match</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>