force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Pursuit_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Pursuit_Fit_Score__c</fullName>
    <label>Pursuit Fit Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>