force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pursue Now</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Qualify Further</fullName>
            </value>
            <value>
                <fullName>Deprioritize</fullName>
            </value>
            <value>
                <fullName>Escalate to Human</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>