force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Revenue_Potential__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Potential__c</fullName>
    <label>Revenue Potential</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>