force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Score_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Score_Rationale__c</fullName>
    <label>Score Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>