force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Source_Quality__c.field-meta.xml
<CustomField>
    <fullName>Source_Quality__c</fullName>
    <label>Source Quality</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>