force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
        <value><fullName>Reviewed</fullName><default>false</default><label>Reviewed</label></value>
        <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
        <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
    </valueSetDefinition></valueSet>
</CustomField>