force-app/main/default/objects/OA_Opportunity_Intelligence__c/fields/Win_Probability_Score__c.field-meta.xml
<CustomField>
    <fullName>Win_Probability_Score__c</fullName>
    <label>Win Probability Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>